[package]
name = "execution-engine"
version = "0.1.0"
authors = ["Michael Birch <birchmd@casperlabs.io>", "Mateusz Górski <gorski.mateusz@protonmail.ch>"]

[dependencies]
blake2 = "0.8"
wasmi = "0.4.2"
parity-wasm = "0.31"
pwasm-utils = "0.6"
storage = { path = "../storage" }
common = { path = "../common", features = ["std", "gens"], package = "casperlabs-contract-ffi" }
failure = "0.1.5"
wasm-prep = { path = "../wasm-prep" }
clap = "2.32.0"
parking_lot = "0.7.1"
rand = "0.6.1"
rand_chacha = "0.1.1"
shared = { path = "../shared" }
itertools = "0.8.0"
linked-hash-map = "0.5.2"

[dev-dependencies]
matches = "0.1.8"
proptest = "0.9.2"
wabt = "0.7.4"

[[bin]]
name = "engine-standalone"
path = "src/main.rs"

[lib]
name = "execution_engine"
path = "src/lib.rs"
