[package]
name = "gens"
version = "0.1.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]
edition = "2018"

[dependencies]
proptest = "0.9.2"
common = { path = "../common", features = ["std"], package = "casperlabs-contract-ffi" }
shared = { path = "../shared" }
storage = { path = "../storage" }
