[package]
name = "casperlabs-mint"
version = "0.1.0"
authors = ["Henry Till <henrytill@gmail.com>"]
edition = "2018"
description = "Defines the mint api"
documentation = "https://docs.rs/casperlabs-mint"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs/tree/master/execution-engine/mint"
license-file = "../../LICENSE"

[features]
std = ["types/std"]

[dependencies]
types = { version = "0.3.0", path = "../types", package = "casperlabs-types" }
