[package]
name = "casperlabs-proof-of-stake"
version = "0.1.0"
authors = ["Henry Till <henrytill@gmail.com>"]
edition = "2018"

[features]
std = ["types/std"]

[dependencies]
base16 = { version = "0.2.1", default-features = false }
types = { version = "0.3.0", path = "../types", package = "casperlabs-types" }
