[package]
name = "shared"
version = "0.2.0"
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@casperlabs.io>"]
edition = "2018"

[dependencies]
blake2 = "0.8"
chrono = "0.4.6"
common = { path = "../common", features = ["std"], package = "casperlabs-contract-ffi" }
hostname = "0.1.5"
lazy_static = "1.3.0"
libc = "0.2.54"
log = "0.4.6"
num = { version = "0.2.0", default-features = false }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
