[package]
name = "storage"
version = "0.1.0"
authors = ["Michael Birch <birchmd@casperlabs.io>"]

[dependencies]
rkv = "0.9.1"
wasmi = "0.4.2"
common = { path = "../common", features = ["std"], package = "casperlabs-contract-ffi" }
parking_lot = "0.7.1"
blake2 = "0.8"

[dev-dependencies]
matches = "0.1.8"
tempfile = "3.0.6"
gens = { path = "../gens" }
proptest = "0.8.7"

