[package]
name = "storage"
version = "0.1.0"
authors = ["Michael Birch <birchmd@casperlabs.io>"]

[dependencies]
failure = "0.1.5"
lmdb = "0.8.0"
num = { version = "0.2.0", default-features = false }
wasmi = "0.4.2"
common = { path = "../common", features = ["std", "gens"], package = "casperlabs-contract-ffi" }
parking_lot = "0.7.1"
shared = { path = "../shared" }

[dev-dependencies]
lazy_static = "1.3.0"
proptest = "0.9.2"
tempfile = "3"
