[workspace]

members = [
    "it_common",
    "combined-contracts/call",
    "combined-contracts/define",
    "counter/call",
    "counter/define",
    "direct-revert-test/call",
    "direct-revert-test/define",
    "get-caller/call",
    "get-caller/define",
    "hello-name/call",
    "hello-name/define",
    "list-known-urefs/call",
    "list-known-urefs/define",
    "mailing-list/call",
    "mailing-list/define",
    "subcall-revert-test/call",
    "subcall-revert-test/define",
    "test_args/u32",
    "test_args/u512",
    "test_args/multi",
    "bonding/call",
    "unbonding/call",
    "payment-purse",
    "finalize-payment",
    "refund-purse",
    "standard-payment",
    "err-standard-payment",
    "transfer_to_account",
    "err-transfer-to-account",
]
