[package]
name = "erc20-smart-contract-test"
version = "0.1.0"
authors = ["Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"


[dependencies]
engine_tests  = { package = "casperlabs-engine-tests",  path = "../../engine-tests" }
contract_ffi  = { package = "casperlabs-contract-ffi",  path = "../../contract-ffi" }
