[package]
name = "get-blocktime"
version = "0.1.0"
authors = ["Ed Hastings <ed@casperlabs.io>, Henry Till <henrytill@gmail.com>"]
edition = "2018"

[lib]
name = "get_blocktime"
crate-type = ["cdylib"]

[features]
default = []
std = ["cl_std/std" ]

[dependencies]
cl_std = { path = "../../common", package = "casperlabs-contract-ffi" }
