[package]
name = "local-state"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[lib]
name = "local_state"
crate-type = ["cdylib"]

[features]
default = []
std = ["cl_std/std"]

[dependencies]
cl_std = { path = "../../common", package = "casperlabs-contract-ffi" }
