[package]
name = "faucet"
version = "0.1.0"
authors = ["Mateusz Górski <mateusz@casperlabs.io>"]
edition = "2018"

[lib]
name = "faucet"
crate-type = ["cdylib"]

[features]
default = []
std = ["contract-ffi/std" ]

[dependencies]
contract-ffi = { path = "../../../execution-engine/contract-ffi", package = "casperlabs-contract-ffi" }
