[package]
name = "transfer"
version = "0.1.0"
authors = ["Akosh Farkash <akosh@casperlabs.io>"]
edition = "2018"

[lib]
name = "transfer"
crate-type = ["cdylib"]

[features]
default = []
std = ["cl_std/std" ]

[dependencies]
cl_std = { path = "../../../execution-engine/contract-ffi", package = "casperlabs-contract-ffi" }
