[package]
name = "transfer"
version = "0.1.0"
authors = ["Akosh Farkash <akosh@casperlabs.io>"]
edition = "2018"

[lib]
name = "transfer"
crate-type = ["cdylib"]

[features]
default = []
std = ["contract-ffi/std" ]

[dependencies]
contract-ffi = { path = "../../../execution-engine/contract-ffi", package = "casperlabs-contract-ffi" }
